[metadata]
name: dcar
version: 0.0.4
url: https://andreas19.github.io/dcar/
project_urls: Source code=https://github.com/andreas19/dcar/
author: Andreas Suhre
author_email: andreas19@posteo.eu
classifiers:
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
license: BSD-3-Clause
license_file: LICENSE.txt
description: Low level, pure Python D-Bus implementation for message bus clients.
long_description: file:README.md,CHANGELOG.md
long_description_content_type: text/markdown

[options]
python_requires: >=3.7
packages: dcar
package_dir: =src
